// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/graphql patients adds new patient 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$input" got invalid value {"accountId":"62954241-3652-4792-bae5-5bfed53d37b7","firstName":"Lucas","lastName":"Taliberti","clientMutationId":"carecrutest"}; Field value.omitReminderIds of required type [String]! was not provided.],
    [GraphQLError: Variable "$input" got invalid value {"accountId":"62954241-3652-4792-bae5-5bfed53d37b7","firstName":"Lucas","lastName":"Taliberti","clientMutationId":"carecrutest"}; Field value.omitRecallIds of required type [String]! was not provided.],
  ],
}
`;

exports[`/graphql patients queries a list of patients 1`] = `
Object {
  "data": Object {
    "accountViewer": Object {
      "patients": Object {
        "edges": Array [
          Object {
            "node": Object {
              "firstName": "Ronald",
              "id": "UGF0aWVudDoxMDUxOGUxMS1iOWQyLTRkNzQtOTg4Ny0yOWVhYWU3YjU5Mzg=",
              "lastName": "Mcdonald",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`/graphql patients queries a patient 1`] = `
Object {
  "data": Object {
    "accountViewer": Object {
      "patient": Object {
        "firstName": "Ronald",
        "id": "UGF0aWVudDoxMDUxOGUxMS1iOWQyLTRkNzQtOTg4Ny0yOWVhYWU3YjU5Mzg=",
        "lastName": "Mcdonald",
      },
    },
  },
}
`;

exports[`/graphql patients queries a patient with its family 1`] = `
Object {
  "data": Object {
    "accountViewer": Object {
      "patient": Object {
        "family": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "headId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
          "id": "RmFtaWx5OmIzNWJlZTkyLWU4NmQtNDA4NC04N2Q4LWFkZDIxYTFiYTBmNg==",
        },
        "familyId": "b35bee92-e86d-4084-87d8-add21a1ba0f6",
        "firstName": "Ronald",
        "id": "UGF0aWVudDoxMDUxOGUxMS1iOWQyLTRkNzQtOTg4Ny0yOWVhYWU3YjU5Mzg=",
        "lastName": "Mcdonald",
      },
    },
  },
}
`;

exports[`/graphql patients updates a patient 1`] = `
Object {
  "data": Object {
    "updatePatientMutation": Object {
      "clientMutationId": "carecrutest",
      "patient": Object {
        "firstName": "Lucas",
        "id": "UGF0aWVudDoxMDUxOGUxMS1iOWQyLTRkNzQtOTg4Ny0yOWVhYWU3YjU5Mzg=",
        "lastName": "Sousa",
      },
    },
  },
}
`;
